# serializer version: 1
# name: test_get_music_source_by_id
  dict({
    'available': True,
    'image_url': 'https://production.ws.skyegloup.com:443/media/images/service/logos/pandora.png',
    'name': 'Pandora',
    'service_username': 'email@email.com',
    'source_id': 1,
    'type': <MediaType.MUSIC_SERVICE: 'music_service'>,
  })
# ---
# name: test_get_search_criteria
  list([
    dict({
      'container_id': None,
      'criteria_id': 1,
      'name': 'Artist',
      'playable': False,
      'wildcard': False,
    }),
    dict({
      'container_id': None,
      'criteria_id': 2,
      'name': 'Album',
      'playable': False,
      'wildcard': False,
    }),
    dict({
      'container_id': 'SEARCHED_TRACKS-',
      'criteria_id': 3,
      'name': 'Track',
      'playable': True,
      'wildcard': False,
    }),
    dict({
      'container_id': None,
      'criteria_id': 6,
      'name': 'Playlist',
      'playable': False,
      'wildcard': False,
    }),
  ])
# ---
# name: test_multi_search
  dict({
    'count': 74,
    'criteria_ids': list([
      0,
      1,
      2,
      3,
    ]),
    'errors': list([
      dict({
        'count': None,
        'criteria_id': 0,
        'error_number': 2,
        'returned': None,
        'source_id': 13,
      }),
      dict({
        'count': None,
        'criteria_id': 0,
        'error_number': -1061,
        'returned': None,
        'source_id': 8,
      }),
    ]),
    'items': list([
      dict({
        'album': None,
        'album_id': None,
        'artist': 'ZEDD',
        'browsable': True,
        'container_id': 'LIBALBUM-401193042',
        'image_url': 'http://resources.wimpmusic.com/images/42831a87/1001/4335/a832/fb8bdf6781db/160x160.jpg',
        'media_id': None,
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.ALBUM: 'album'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': 'ZEDD',
        'browsable': True,
        'container_id': 'LIBALBUM-401192835',
        'image_url': 'http://resources.wimpmusic.com/images/f073e403/ee90/4d9e/80a4/731b57de9f55/160x160.jpg',
        'media_id': None,
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.ALBUM: 'album'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-R66030',
        'name': 'Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-R696162',
        'name': 'X-Rays',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-R400422',
        'name': 'Tangerine Kitty',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-R4004275',
        'name': 'Ferrari Simmons & RaySean',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-R172591',
        'name': 'Ray Stevens (Holiday)',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-R5180582',
        'name': 'Dr. Hook & Ray Sawyer',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-R153854',
        'name': 'X-Ray Spex',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S133862497',
        'name': 'Tangerine Rays by Zedd, Bea Miller & ellis',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S142439068',
        'name': 'Tangerine Rays by Zedd, Bea Miller & ellis',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S142439069',
        'name': 'Tangerine Rays (Instrumental) by Zedd, Bea Miller & ellis',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S142439070',
        'name': 'Tangerine Rays (Acapella) by Zedd, Bea Miller & ellis',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S136888654',
        'name': 'Tangerine Rays (8-Bit Bea Miller, Ellis & Zedd Emulation) by 8-Bit Arcade',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S32964',
        'name': 'Tangerine (Remaster) by Led Zeppelin',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S5786562',
        'name': 'Tangerine Sky by Kottonmouth Kings',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S164056',
        'name': 'Tangerine by Eliane Elias',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S5615318',
        'name': 'Tangerine by Herb Alpert & The Tijuana Brass',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S46560612',
        'name': 'TANGERINE DREAM by Snoh Aalegra',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S7989950',
        'name': 'Sun Rays Like Stilts by Tommy Guerrero',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S571786',
        'name': 'Tangerine (Remastered) by Les Brown',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S13186508',
        'name': 'Sun Rays Vol. 2 by Chillout Lounge',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1454325',
        'name': 'Say Goodbye to the Tangerine Sky by Kottonmouth Kings',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1926771',
        'name': 'Rays of Light by 2002',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S28616466',
        'name': 'Los Santos City Map by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S48872068',
        'name': 'Tangerine by Glass Animals',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S16481097',
        'name': 'Speed Dragon by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1082443',
        'name': 'Tangerine by Mary Louise Knutson',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S11825304',
        'name': 'Identity Proven Matrix by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S24154834',
        'name': 'First Rays of Light by Celestial Alignment',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S16550589',
        'name': 'Tangerine by Amane',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1127632',
        'name': 'Metaphor Part One by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S18892466',
        'name': "Sequent 'C' (Remastered 2018) by Tangerine Dream",
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S30194818',
        'name': 'Tangerine (Live at Whittemore Center Arena) (Durham) (NH) (02.19.96) by Dave Matthews Band',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S15007209',
        'name': 'The Sun Whose Rays (Live At Teatro La Fenice, Venice / 2006) by Keith Jarrett',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S11970982',
        'name': 'Tangerine (feat. Big Sean) by Miley Cyrus',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S5930743',
        'name': 'Morning Rays (Album Version) (feat. Richard Tee) by Tom Scott',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S13653697',
        'name': 'Cosmic Rays by Charlie Parker Quartet',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S2082136',
        'name': 'Tangerine by First Aid Kit',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1898039',
        'name': 'Seven Rays by 2002',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S28616469',
        'name': 'Stratosfear 2019 by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S30144',
        'name': 'Your X-Rays Have Just Come Back From The Lab And We Think We Know What Your Problem Is by Jets To Brazil',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S40299096',
        'name': 'Tangerine by Barii',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1127647',
        'name': 'Tangines On And Running by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S38892893',
        'name': 'Father And Son (Resurrection 2) by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S28616468',
        'name': 'Yellowstone Park 2019 by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S8963484',
        'name': 'X-Rays by Jackie Mason',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S6870549',
        'name': 'Italian X Rays by Steve Miller Band',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S5811178',
        'name': 'Tangerine (Remastered 2001) by Joe Pass',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S35125374',
        'name': 'Tyger 2013 by Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S6442778',
        'name': "The First Rays of This Forever's Light by Matt Borghi",
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S13653699',
        'name': 'Cosmic Rays (Alternate Take) by Charlie Parker Quartet',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S36767691',
        'name': 'Tangerine Sour by Emancipator & 9 Theory',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1098124',
        'name': 'Moon Rays (2007 Digital Remaster/Rudy Van Gelder Edition) by Horace Silver Quintet',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S16550591',
        'name': 'Tangerine by Amane',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S30475082',
        'name': 'Tangerine by Lou Donaldson',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S17131911',
        'name': 'Morgenstern, Pt. 4 by Schiller & Tangerine Dream',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S1609452',
        'name': 'Ceremony of the Seven Rays by Deborah Van Dyke',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': None,
        'album_id': None,
        'artist': None,
        'browsable': False,
        'container_id': None,
        'image_url': '',
        'media_id': 'CREATE_STATION-S9747275',
        'name': 'Tangerine by Bob Brookmeyer & Stan Getz Quintet',
        'playable': True,
        'source_id': 1,
        'type': <MediaType.STATION: 'station'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401192835',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/f073e403/ee90/4d9e/80a4/731b57de9f55/640x640.jpg',
        'media_id': '401192836',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Telos',
        'album_id': '383020262',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/28fe4513/7d90/4b62/b3df/2cb09ec35477/640x640.jpg',
        'media_id': '383020264',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401192835',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/f073e403/ee90/4d9e/80a4/731b57de9f55/640x640.jpg',
        'media_id': '401192838',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Telos',
        'album_id': '383020285',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/36dc43cb/aa36/44cf/bb54/aca54d5991b6/640x640.jpg',
        'media_id': '383020288',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Telos',
        'album_id': '383978026',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/fec0bead/36dd/4357/8e3d/d0af125bb913/640x640.jpg',
        'media_id': '383978029',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401193042',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/42831a87/1001/4335/a832/fb8bdf6781db/640x640.jpg',
        'media_id': '401193043',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401192835',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/f073e403/ee90/4d9e/80a4/731b57de9f55/640x640.jpg',
        'media_id': '401192837',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401193042',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/42831a87/1001/4335/a832/fb8bdf6781db/640x640.jpg',
        'media_id': '401193045',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401193042',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/42831a87/1001/4335/a832/fb8bdf6781db/640x640.jpg',
        'media_id': '401193044',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Pristine Karaoke, Vol. 170',
        'album_id': '389676760',
        'artist': 'Backing Business',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/4efa15cf/1a95/423a/8b05/f656281da36e/640x640.jpg',
        'media_id': '389676834',
        'name': 'Tangerine Rays (Karaoke Version Originally Performed by Bea Miller, Ellis & Zedd)',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Jazz for Improving Concentration in Spring',
        'album_id': '355503098',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/6214ae8c/36a7/4cfd/91c6/12165df564cc/640x640.jpg',
        'media_id': '355503127',
        'name': 'Study Alcove Gentle Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'サマー・ブリーズとコーヒータイム',
        'album_id': '376883744',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/7c7f3b86/24ea/459d/8640/a139dcd28f7e/640x640.jpg',
        'media_id': '376883749',
        'name': 'Gathering Summer Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Summer Bossa Time at the Beachside',
        'album_id': '377809861',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/3bbfc24b/9939/4a2d/b538/4f034f4cf305/640x640.jpg',
        'media_id': '377809865',
        'name': 'Gathering Summer Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Jazz for Improving Concentration in Spring',
        'album_id': '355503098',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/6214ae8c/36a7/4cfd/91c6/12165df564cc/640x640.jpg',
        'media_id': '355503109',
        'name': 'First Rays Symmetry',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Instrumental BGM Matching a Relaxed New Life',
        'album_id': '355149701',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/fbfe5e8b/b775/4d97/9053/8f0ac7daf4fd/640x640.jpg',
        'media_id': '355149731',
        'name': 'Morning Rays and Fresh Starts',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
    ]),
    'returned': 74,
    'search': 'Tangerine Rays',
    'source_ids': list([
      1,
      4,
      8,
      13,
      10,
    ]),
    'statistics': list([
      dict({
        'count': 2,
        'criteria_id': 2,
        'error_number': None,
        'returned': 2,
        'source_id': 10,
      }),
      dict({
        'count': 0,
        'criteria_id': 1,
        'error_number': None,
        'returned': 0,
        'source_id': 10,
      }),
      dict({
        'count': 57,
        'criteria_id': 0,
        'error_number': None,
        'returned': 57,
        'source_id': 1,
      }),
      dict({
        'count': 15,
        'criteria_id': 3,
        'error_number': None,
        'returned': 15,
        'source_id': 10,
      }),
    ]),
  })
# ---
# name: test_retrieve_metadata
  dict({
    'container_id': '123456',
    'count': 1,
    'metadata': list([
      dict({
        'album_id': '7890',
        'images': list([
          dict({
            'image_url': 'http://resources.wimpmusic.com/images/fbfe5e8b/b775/4d97/9053/8f0ac7daf4fd/640x640.jpg',
            'width': 640,
          }),
          dict({
            'image_url': 'http://resources.wimpmusic.com/images/fbfe5e8b/b775/4d97/9053/8f0ac7daf4fd/320x320.jpg',
            'width': 320,
          }),
        ]),
      }),
    ]),
    'returned': 1,
    'source_id': 6,
  })
# ---
# name: test_search
  dict({
    'count': 15,
    'criteria_id': 3,
    'items': list([
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401192835',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/f073e403/ee90/4d9e/80a4/731b57de9f55/640x640.jpg',
        'media_id': '401192836',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Telos',
        'album_id': '383020262',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/28fe4513/7d90/4b62/b3df/2cb09ec35477/640x640.jpg',
        'media_id': '383020264',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401192835',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/f073e403/ee90/4d9e/80a4/731b57de9f55/640x640.jpg',
        'media_id': '401192838',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Telos',
        'album_id': '383020285',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/36dc43cb/aa36/44cf/bb54/aca54d5991b6/640x640.jpg',
        'media_id': '383020288',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Telos',
        'album_id': '383978026',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/fec0bead/36dd/4357/8e3d/d0af125bb913/640x640.jpg',
        'media_id': '383978029',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401193042',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/42831a87/1001/4335/a832/fb8bdf6781db/640x640.jpg',
        'media_id': '401193043',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401192835',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/f073e403/ee90/4d9e/80a4/731b57de9f55/640x640.jpg',
        'media_id': '401192837',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401193042',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/42831a87/1001/4335/a832/fb8bdf6781db/640x640.jpg',
        'media_id': '401193045',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Tangerine Rays',
        'album_id': '401193042',
        'artist': 'ZEDD',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/42831a87/1001/4335/a832/fb8bdf6781db/640x640.jpg',
        'media_id': '401193044',
        'name': 'Tangerine Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Pristine Karaoke, Vol. 170',
        'album_id': '389676760',
        'artist': 'Backing Business',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/4efa15cf/1a95/423a/8b05/f656281da36e/640x640.jpg',
        'media_id': '389676834',
        'name': 'Tangerine Rays (Karaoke Version Originally Performed by Bea Miller, Ellis & Zedd)',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Jazz for Improving Concentration in Spring',
        'album_id': '355503098',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/6214ae8c/36a7/4cfd/91c6/12165df564cc/640x640.jpg',
        'media_id': '355503127',
        'name': 'Study Alcove Gentle Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'サマー・ブリーズとコーヒータイム',
        'album_id': '376883744',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/7c7f3b86/24ea/459d/8640/a139dcd28f7e/640x640.jpg',
        'media_id': '376883749',
        'name': 'Gathering Summer Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Summer Bossa Time at the Beachside',
        'album_id': '377809861',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/3bbfc24b/9939/4a2d/b538/4f034f4cf305/640x640.jpg',
        'media_id': '377809865',
        'name': 'Gathering Summer Rays',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Jazz for Improving Concentration in Spring',
        'album_id': '355503098',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/6214ae8c/36a7/4cfd/91c6/12165df564cc/640x640.jpg',
        'media_id': '355503109',
        'name': 'First Rays Symmetry',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
      dict({
        'album': 'Instrumental BGM Matching a Relaxed New Life',
        'album_id': '355149701',
        'artist': 'Tangerine Jazz',
        'browsable': False,
        'container_id': None,
        'image_url': 'http://resources.wimpmusic.com/images/fbfe5e8b/b775/4d97/9053/8f0ac7daf4fd/640x640.jpg',
        'media_id': '355149731',
        'name': 'Morning Rays and Fresh Starts',
        'playable': True,
        'source_id': 10,
        'type': <MediaType.SONG: 'song'>,
      }),
    ]),
    'returned': 15,
    'search': 'Tangerine Rays',
    'source_id': 10,
  })
# ---
